syntax = "proto3";

package customHello;

service CustomHelloService {
  rpc GetCustomHello (CustomHelloReq) returns (CustomHello) {}
}

message CustomHelloReq {
  string data = 1;
}

message CustomHello {
  string reply = 1;
}